fix spacing in figcaptions

--- a/static/global.css
+++ b/static/global.css
@@ -157,6 +157,7 @@ blockquote {
 
 blockquote > * + *,
 article > * + *,
+figcaption > * + *,
 * + figcaption {
 	margin-top: 1em;
 }
